logo fixed mobile

--- a/src/pages/sign-ın/index.scss
+++ b/src/pages/sign-ın/index.scss
@@ -61,10 +61,10 @@ img {
 }
 
 .logo img {
-	width: 170px;
-	position: absolute;
-	top: 20px;
-	left: 40px;
+	width: 27%;
+    position: absolute;
+    top: 31px;
+    left: 40px;
 }
 
 .showcase-content {
