--- a/src/pages/sign-ın/index.scss
+++ b/src/pages/sign-ın/index.scss
@@ -65,6 +65,9 @@ img {
     position: absolute;
     top: 31px;
     left: 40px;
+	@media only screen and (min-width : 992px) {
+        width: 10%;
+     }
 }
 
 .showcase-content {
